# basic-cc-tamplates

srclayout-pypackage-template/: README.md  cookiecutter.json
srclayout-pypackage-template/{{cookiecutter.project_name}}/: pyproject.toml  requirements-dev.txt
