[project]
name = "{{project_name}}"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "click"
]


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=package_a --cov=package_b --cov=app --cov-report=html --cov-report=term-missing"


[tool.isort]
profile = "black"
multi_line_output = 3
